--- a/tutorial/src/parallelization.Rmd
+++ b/tutorial/src/parallelization.Rmd
@@ -1,12 +1,12 @@
 # Parallelization
 
-**R** by default doesn't make use of parallelization.
+**R** by default does not make use of parallelization.
 With the integration of [%parallelMap] into [%mlr], it becomes easy to activate the parallel computing capabilities already supported by [%mlr].
 [%parallelMap] supports all major parallelization backends: local multicore execution using [%parallel], socket and MPI clusters using [%snow], makeshift SSH-cluster using [%BatchJobs] and high performance computing clusters (managed by a scheduler like SLURM, Torque/PBS, SGE or LSF) also using [%BatchJobs].
 
 All you have to do is select a backend by calling one of the
 [parallelStart*](&parallelMap::parallelStart) functions.
-The first loop [%mlr] encounters which is marked for possible parallel execution will then be automatically parallelized.
+The first loop [%mlr] encounters which is marked as parallel executable will be automatically parallelized.
 It is good practice to call [parallelStop](&parallelMap::parallelStop) at the end of your script.
 
 ```{r}
@@ -20,10 +20,8 @@ parallelStop()
 On Linux or Mac OS X, you may want to use
 [parallelStartMulticore](&parallelMap::parallelStartMulticore) instead.
 We offer different parallelization levels for fine grained control over the parallelization.
-E.g., if you do not want to parallelize the [&benchmark] function because it has only very
-few iterations but want to parallelize the [resampling](&resample) of each learner instead,
-you can specifically pass the ``level`` `"resample"` to the
-[parallelStart*](&parallelMap::parallelStart) function.
+E.g., if you do not want to parallelize the [&benchmark] function because it has only very few iterations but want to parallelize the [resampling](&resample) of each learner instead,
+you can specifically pass the ``level`` `"mlr.resample"` to the [parallelStart*](&parallelMap::parallelStart) function.
 Currently the following levels are supported:
 ```{r}
 parallelShowRegisteredLevels()
