--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ mlr_2.3:
 - mlr supports ViperCharts plots now
 - all mlr measures now have slots "name" and "note"
 - exported a few very simple "getters" for tasks, see below
+- in the control objects for tuning and feature selection, the user can now enable threshold tuning
+- in the control objects for tuning and feature selection, the user can now define his own logging function
+- some minor bug fixes
+- updated some properties of some learners
 
 - new functions
 -- plotViperCharts
