--- a/tutorial/src/train.Rmd
+++ b/tutorial/src/train.Rmd
@@ -19,7 +19,7 @@ mod
 ```
 
 In the above example, creating a [Learner](&makeLearner) explicitly is not strictly necessary.
-Generally, you have to create a [Learner](&makeLearner) if you want to change any defaults
+As a general rule, you have to create a [Learner](&makeLearner) if you want to change any defaults
 by, e.g., setting hyperparameter values or changing the type of prediction.
 Otherwise, [&train] and many other functions accept a character string naming the learning
 method.
@@ -45,7 +45,7 @@ Optionally, only a subset of the data, specified by an index set, can be used to
 train the learner. This set is passed using the ``subset`` argument of [&train].
 
 We fit a simple linear regression model to the [BostonHousing](&mlbench::BostonHousing) data set.
-The object [bh.task](&mlr.bh) is the regression [&Task] on the [BostonHousing](&mlbench::BostonHousing)
+The object [&bh.task] is the regression [&Task] on the [BostonHousing](&mlbench::BostonHousing)
 data set provided by [%mlr].
 
 ```{r}
@@ -89,13 +89,13 @@ The weights in [&train] overwrite the weights in [&Task].
 
 ## Wrapped models
 
-[&train] returns an object of class [&makeWrappedModel], which wraps the
+[&train] returns an object of class [WrappedModel](&makeWrappedModel), which wraps the
 particular model of the underlying **R** learning method. The wrapped model contains the output as well as the actual model.
 It can subsequently be used to perform a [prediction](&predict.WrappedModel) for new observations.
 
 
 In order to access the underlying model we can use the function [&getLearnerModel].
-In the following example we get an object of class ["lm"](&stats::lm).
+In the following example we get an object of class [lm](&stats::lm).
 
 ```{r}
 mod = train("regr.lm", bh.task, subset = train.set)
